# survey-assist-api

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  SIC_SOC_ENDPOINT_CALLS_MASTER.md  mkdocs.yml  pyproject.toml  pytest.ini
api/: config.py  main.py
api/models/: classify.py  config.py  embeddings.py  feedback.py  result.py  sic_sayt.py  soc_classify.py
api/routes/v1/: classify.py  config.py  embeddings.py  feedback.py  lookup_handlers.py  result.py  sic_lookup.py  sic_lookup_router.py  sic_sayt.py  soc_lookup.py
api/services/: base_vector_store_client.py  feedback_service.py  firestore_client.py  google_id_token_provider.py  package_utils.py  result_service.py  sic_lookup_client.py  sic_rephrase_client.py  sic_sayt_client.py  sic_vector_store_client.py  soc_llm_service.py  soc_lookup_client.py  soc_rephrase_client.py  soc_vector_store_client.py  vector_store_client.py
api_eval/: README.md  classify_body.py  classify_validators.py  run_classify.py
cicd/: cloudbuild.yaml  cloudbuild_dev_and_sandbox.yaml  cloudbuild_promote_preprod.yaml  run_smoke_tests.sh
cicd/tests/: test_smoke_tests.py
docs/: gcp-deployment.md  gcp_deployment.md  generic_classification.md  guide.md  index.md
scripts/: get_results_to_csv.py
scripts/output/: classify_responses_local_test_run.jsonl
sic_lookup/: sic_lookup.py
sic_lookup/data/: example_sic_data.csv  sic_knowledge_base_utf8.csv  sic_rephrased_descriptions_2025_02_03.csv
sic_soc_llm/data_models/: response_model.py  sicDB.py  sic_data_access.py  sic_hierarchy.py
tests/: conftest.py  test_classify.py  test_classify_generic.py  test_feedback.py  test_lookup_client_common.py  test_lookup_response.py  test_main.py  test_result.py  test_sic_lookup_client.py  test_sic_rephrase_client.py  test_sic_sayt_client.py  test_sic_sayt_endpoint.py  test_soc_classification.py  test_soc_lookup_client.py  test_soc_lookup_endpoint.py  test_soc_rephrase_client.py  test_utils.py
tests/data/: sic_codes.csv
utils/: survey.py
